[package]
name = "fennel-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.5.0"
rand = "0.8.4"
sha3 = "0.10.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
pkcs1 = "0.3.3"
rocksdb = "0.17.0"
bincode = "1.3.3"
slice-of-array = "0.3.1"
codec = { version = "2.3.1", package = "parity-scale-codec", features = ["derive"] }
openssl = "0.10.29"
subxt = "0.17.0"
env_logger = "0.9.0"
log = "0.4.14"
hex = "0.4.3"
thiserror = "1.0.30"
parking_lot = "0.12.0"
rand_core = "0.5.0"
x25519-dalek = "1.2.0"