[package]
name = "dh_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes_tools = { path = "../aes_tools" }
x25519-dalek = { version = "2.0.1", features=["static_secrets"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
